Fix links on mobile

--- a/magazine.css
+++ b/magazine.css
@@ -780,8 +780,8 @@ footer>p {
         /* row-gap: 30px; */
         grid-template-columns: 110px 110px 110px;
         grid-auto-flow: row;
-        grid-gap: 18px;
-        row-gap: 15px;
+        grid-gap: 0px;
+        row-gap: 10px;
     }
 
     #icons .btn_icon {
